Modified GamePlayRecorderActor -- Constructor takes in parameters so that it is not bound to Configuration
Modified GameSessionSPOCActor
-- Reads Configuration
-- Creates children GamePlayRecorderActors with appropriate parameters

Modified GameSessionRecordingServer
-- Reads Configuration and accordingly sets up the components

Modified tests/*
-- Creates components according to the new Constructor signatures
-- Reads Configuration to test correctness of values provided

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,4 +1,11 @@
-GameSessionService {
+
+GameSession {
+
+  redisEndPoint {
+
+    host = "localhost"
+    port = 6379
+  }
 
   availableAt {
 
@@ -6,10 +13,10 @@ GameSessionService {
     port = 9090
   }
 
-  redisEndPoint {
+  maxGameTimeOut {
 
-    host = "localhost"
-    port = 6379
+    // Unit is expressed in seconds
+    duration = 20
   }
 
 }
