--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,10 @@
-GameSessionService {
+GameSession {
+
+  redisEndPoint {
+
+    host = "localhost"
+    port = 6379
+  }
 
   availableAt {
 
@@ -6,10 +12,10 @@ GameSessionService {
     port = 9090
   }
 
-  redisEndPoint {
+  maxGameTimeOut {
 
-    host = "localhost"
-    port = 6379
+    // Unit is expressed in seconds
+    duration = 20
   }
 
 }
