- Added GameSessionCompletionEmitterActor - Modified other actors to accept an ActorRef of the this type during construction,  as appropriate - Modified GamePlayRecorderActor to call this actor, when the session is coming to an end - Added new testcase for this actor - Updated README

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -19,4 +19,10 @@ GameSession {
     duration = 20
   }
 
+  externalServices {
+
+    // HTTP endpoints, which want to be informed when a GameSession is finished
+    completionSubscribers = ["http://httpbin.org/put"]
+  }
+
 }
