updated application.conf with endpoints

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,4 @@
+
 GameSession {
 
   redisEndPoint {
@@ -16,6 +17,12 @@ GameSession {
 
     // Unit is expressed in seconds
     duration = 20
+  }
+
+  externalServices {
+
+    // HTTP endpoints, which want to be informed when a GameSession is finished
+    completionSubscribers = ["http://httpbin.org/put"]
   }
 
 }
