- Added new Event ClipIsPlaying to the FSM - Added corresponding external API classes - Replaced all 'localhost' with  '127.0.0.1' in application.conf - Added nativepackager to plugins.sbt

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,13 +3,13 @@ GameSession {
 
   redisEndPoint {
 
-    host = "localhost"
+    host = "127.0.0.1"
     port = 6379
   }
 
   availableAt {
 
-    host = "localhost"
+    host = "127.0.0.1"
     port = 9090
   }
 
