- Added new configuration element: maxResponseTimelimit; this is essentially a timeout value that causes a TimeoutException to be thrown, during ask(?) calls - Modified the JSON structure in the protocol, that provides the Response to callers of GameSessionRecordingService (following the contents of Confluence page) - Updated the tests

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,10 +13,19 @@ GameSession {
     port = 9090
   }
 
-  maxGameTimeOut {
-
+  maxGameSessionLifetime {
+    // All GameSessions will automatically terminate once this time elapses.
     // Unit is expressed in seconds
     duration = 20
+  }
+
+  maxResponseTimeLimit {
+    // Every request to GameSessionRecordingService is handled internally, by passing messages and
+    // delegating responsibilities to actors. Each of these actors represents a GameSession. A request
+    // delegated to such an actor, should not take more than the duration specified here.
+    // This is an internally used value: should be increased only after due analysis.
+    // Unit is expressed in seconds
+    duration = 3
   }
 
   externalServices {
