--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -26,3 +26,10 @@ GameSession {
   }
 
 }
+
+akka {
+  # event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+  // loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loggers = ["akka.event.Logging$DefaultLogger"]
+  loglevel = "DEBUG"
+}
