- Added support for DB (using jOOQ) - Table definitions are generated by using jOOQ -  All unit tests are passing -  Yet to test using cURL -  Work remains (refer to TODOs)

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -107,6 +107,8 @@ GameSession {
 
     // HTTP endpoints, which want to be informed when a GameSession is finished
     completionSubscribers = ["http://httpbin.org/put"]
+    LeaderboardHostingService = "http://httpbin.org/put]"
+    dbAccessURL = "jdbc:mariadb://localhost:3306/OneHuddle?user=nuovo&password=nuovo123"
   }
 
 }
@@ -114,6 +116,6 @@ GameSession {
 akka {
   # event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
   // loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loggers = ["akka.event.Logging$DefaultLogger"]
+  // loggers = ["akka.event.Logging$DefaultLogger"]
   loglevel = "DEBUG"
 }
