--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -13,10 +13,19 @@ GameSession {
     port = 9090
   }
 
-  maxGameTimeOut {
+  maxGameSessionLifetime {
 
     // Unit is expressed in seconds
     duration = 20
+  }
+
+  maxResponseTimeLimit {
+    // Every request to GameSessionRecordingService is handled internally, by passing messages and
+    // delegating responsibilities to actors. Each of these actors represents a GameSession. A request
+    // delegated to such an actor, should not take more than the duration specified here.
+    // This is an internally used value: should be increased only after due analysis.
+    // Unit is expressed in seconds
+    duration = 3
   }
 
   externalServices {
@@ -30,6 +39,11 @@ GameSession {
 akka {
   # event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
   // loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loggers = ["akka.event.Logging$DefaultLogger"]
+  // logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  // loggers =  ["akka.testkit.TestEventListener"] //["akka.event.Logging$DefaultLogger"]
   loglevel = "DEBUG"
+  dbAccessURL = "jdbc:mariadb://localhost:3306/OneHuddle?user=nuovo&password=nuovo123"
 }
+
+akka.actor.debug.receive = true
+akka.actor.debug.fsm     = true
