--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -32,8 +32,10 @@ GameSession {
 
     // HTTP endpoints, which want to be informed when a GameSession is finished
     completionSubscribers = ["http://httpbin.org/put"]
-  }
+    LeaderboardHostingService = "http://httpbin.org/put]"
+    dbAccessURL = "jdbc:mariadb://localhost:3306/OneHuddle?user=nuovo&password=nuovo123"
 
+  }
 }
 
 akka {
@@ -42,7 +44,6 @@ akka {
   // logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   // loggers =  ["akka.testkit.TestEventListener"] //["akka.event.Logging$DefaultLogger"]
   loglevel = "DEBUG"
-  dbAccessURL = "jdbc:mariadb://localhost:3306/OneHuddle?user=nuovo&password=nuovo123"
 }
 
 akka.actor.debug.receive = true
