- Updated DB Tables Schema, to include start time of GameSession, and WinPercent for MP games - Updated code for the same - New table class generated using jOOQ generator - All testcases passed - Integrated with early version of Leaderboard Service (VSRV)

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -91,7 +91,7 @@ GameSession {
   maxGameSessionLifetime {
     // All GameSessions will automatically terminate once this time elapses.
     // Unit is expressed in seconds
-    duration = 60
+    duration = 18000
   }
 
   maxResponseTimeLimit {
@@ -107,15 +107,15 @@ GameSession {
 
     // HTTP endpoints, which want to be informed when a GameSession is finished
     completionSubscribers = ["http://httpbin.org/put"]
-    LeaderboardHostingService = "http://httpbin.org/put]"
+    LeaderboardHostingService = "http://10.10.10.94:8080/leaderBoard"
     dbAccessURL = "jdbc:mariadb://localhost:3306/OneHuddle?user=nuovo&password=nuovo123"
   }
 
 }
 
 akka {
-  # event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
-  // loggers = ["akka.event.slf4j.Slf4jLogger"]
+  event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
   // loggers = ["akka.event.Logging$DefaultLogger"]
   loglevel = "DEBUG"
 }
