- Added endpoints for xAPI service to application.conf - Corrected PlayerPerformance table structure and corresponding JOOQ classes - Updated MariaDBAware.PlaayerPerformanceDBButlerActor - Added AdminPanelNotifier (corresponding to WebSocket service done by VSRV - Added xAPI.ScormInformationExchangeActor - Modified testcases

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -91,7 +91,7 @@ GameSession {
   maxGameSessionLifetime {
     // All GameSessions will automatically terminate once this time elapses.
     // Unit is expressed in seconds
-    duration = 18000
+    duration = 30
   }
 
   maxResponseTimeLimit {
@@ -107,10 +107,20 @@ GameSession {
 
     // HTTP endpoints, which want to be informed when a GameSession is finished
     completionSubscribers = ["http://httpbin.org/put"]
-    LeaderboardHostingService = "http://10.10.10.94:8080/leaderBoard"
+    // Running on personal AWS instance, of VSRV
+    LeaderboardHostingService = "http://34.215.61.147:8080/leaderBoard"
+
+    // Running on personal AWS instance, of VSRV
+    adminPanelPushService = "http://34.215.61.147:9000/adminpanel"
     dbAccessURL = "jdbc:mariadb://localhost:3306/OneHuddle?user=nuovo&password=nuovo123"
   }
 
+}
+
+LRS {
+  endpoint= "https://cloud.scorm.com/tc/WQNM77KEML/sandbox/"
+  username= "WQNM77KEML"
+  password= "w97qvukcZFTtRXIK55AV9JKT6d9zNHAkXR2C1uPF"
 }
 
 akka {
