--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -40,9 +40,8 @@ GameSession {
 
 akka {
   # event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
-  // loggers = ["akka.event.slf4j.Slf4jLogger"]
   // logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-  // loggers =  ["akka.testkit.TestEventListener"] //["akka.event.Logging$DefaultLogger"]
+  loggers =  ["akka.event.slf4j.Slf4jLogger"] // ["akka.event.Logging$DefaultLogger"]
   loglevel = "DEBUG"
 }
 
