- Correct TableCreation script added

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -91,7 +91,7 @@ GameSession {
   maxGameSessionLifetime {
     // All GameSessions will automatically terminate once this time elapses.
     // Unit is expressed in seconds
-    duration = 30
+    duration = 5
   }
 
   maxResponseTimeLimit {
@@ -108,7 +108,7 @@ GameSession {
     // HTTP endpoints, which want to be informed when a GameSession is finished
     completionSubscribers = ["http://httpbin.org/put"]
     // Running on personal AWS instance, of VSRV
-    LeaderboardHostingService = "http://34.215.61.147:8080/leaderBoard"
+    LiveboardHostingService = "http://34.215.61.147:8080/leaderBoard"
 
     // Running on personal AWS instance, of VSRV
     adminPanelPushService = "http://34.215.61.147:9000/adminpanel"
