- Parameterized the value of JOOQ dialect, using com.OneHuddle.GamePlaySessionService.MariaDBAware.JOOQDbDialectDeterminer - Modified all the corresponding call sites - All tests passing

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -80,6 +80,9 @@ GameSession {
 
     host = "127.0.0.1"
     port = 6379
+
+    // host = "172.31.42.169"
+     // port = 7003
   }
 
   availableAt {
@@ -103,6 +106,16 @@ GameSession {
     duration = 3
   }
 
+  database {
+
+    dbAccessURL = "jdbc:mariadb://localhost:3306/OneHuddle?user=nuovo&password=nuovo123"
+    jOOQDBDialect = "MARIADB"
+    // dbAccessURL = "jdbc:mysql://localhost:3306/OneHuddle?user=nuovo&password=nuovo123"
+    // dbAccessURL = "jdbc:mysql://saleshuddle-dev.cmzjmvjunzol.us-west-2.rds.amazonaws.com/OneHuddle?user=nuovo&password=nuovo123"
+    // jOOQDBDialect = "MYSQL"
+
+  }
+
   externalServices {
 
     // HTTP endpoints, which want to be informed when a GameSession is finished
@@ -112,7 +125,7 @@ GameSession {
 
     // Running on personal AWS instance, of VSRV
     adminPanelPushService = "http://34.215.61.147:9000/adminpanel"
-    dbAccessURL = "jdbc:mariadb://localhost:3306/OneHuddle?user=nuovo&password=nuovo123"
+
   }
 
 }
