--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -34,6 +34,7 @@ GameSession {
     completionSubscribers = ["http://httpbin.org/put"]
     LeaderboardHostingService = "http://httpbin.org/put]"
     dbAccessURL = "jdbc:mariadb://localhost:3306/OneHuddle?user=nuovo&password=nuovo123"
+    // dbAccessURL = "jdbc:mysql://saleshuddle-dev.cmzjmvjunzol.us-west-2.rds.amazonaws.com/OneHuddle?user=nuovo&password=nuovo123"
 
   }
 }
